[package]
name = "anchor-cli"
version = "0.27.0"
authors = ["armaniferrante <armaniferrante@gmail.com>"]
rust-version = "1.60"
edition = "2021"
repository = "https://github.com/coral-xyz/anchor"
description = "Anchor CLI"
license = "Apache-2.0"

[[bin]]
name = "anchor"
path = "src/bin/main.rs"

[features]
dev = []
default = []

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
anyhow = "1.0.32"
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
anchor-lang = { path = "../lang", version = "0.27.0" }
anchor-client = { path = "../client", version = "0.27.0" }
anchor-syn = { path = "../lang/syn", features = ["idl", "init-if-needed"], version = "0.27.0" }
serde_json = "1.0"
shellexpand = "2.1.0"
toml = "0.5.8"
solang-parser = "=0.2.3"
semver = "1.0.4"
serde = { version = "1.0.122", features = ["derive"] }
solana-sdk = { git = "https://github.com/solana-labs/solana.git",branch="master" }
solana-program = { git = "https://github.com/solana-labs/solana.git",branch="master" }
solana-client = { git = "https://github.com/solana-labs/solana.git",branch="master" }
solana-cli-config = { git = "https://github.com/solana-labs/solana.git",branch="master" }
solana-faucet = { git = "https://github.com/solana-labs/solana.git",branch="master" }
dirs = "4.0"
heck = "0.4.0"
flate2 = "1.0.19"
tar = "0.4.35"
reqwest = { version = "0.11.4", default-features = false, features = ["multipart", "blocking", "rustls-tls"] }
tokio = "1.14"
pathdiff = "0.2.0"
cargo_toml = "0.13.0"
walkdir = "2.3.2"
chrono = "0.4.19"
portpicker = "0.1.1"
