[package]
name = "anchor-client"
version = "0.27.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]
rust-version = "1.60"
edition = "2021"
license = "Apache-2.0"
description = "Rust client for Anchor programs"

[features]
debug = []

[dependencies]
anchor-lang = { path = "../lang", version = "0.27.0" }
anyhow = "1.0.32"
regex = "1.4.5"
serde = { version = "1.0.122", features = ["derive"] }
solana-client = { git = "https://github.com/solana-labs/solana.git",branch="master" }
solana-sdk = { git = "https://github.com/solana-labs/solana.git",branch="master" }
solana-account-decoder = { git = "https://github.com/solana-labs/solana.git",branch="master" }
thiserror = "1.0.20"
url = "2.2.2"
